# asteroid-calculator

./: CMakeLists.txt  CalcButton.qml  Display.qml  README.md  asteroid-calculator.desktop  asteroid-calculator.desktop.template  asteroid-calculator.in  asteroid-calculator.pro  calculator.js  main.cpp  main.qml  resources.qrc
i18n/: asteroid-calculator.ar_AR.ts  asteroid-calculator.ast.ts  asteroid-calculator.az.ts  asteroid-calculator.be.ts  asteroid-calculator.bqi.ts  asteroid-calculator.cs.ts  asteroid-calculator.da.ts  asteroid-calculator.de.ts  asteroid-calculator.de_DE.ts  asteroid-calculator.desktop.h  asteroid-calculator.el.ts  asteroid-calculator.en_GB.ts  asteroid-calculator.eo.ts  asteroid-calculator.es.ts  asteroid-calculator.es_AR.ts  asteroid-calculator.fa.ts  asteroid-calculator.fi.ts  asteroid-calculator.fr.ts  asteroid-calculator.gl.ts  asteroid-calculator.he.ts  asteroid-calculator.hi.ts  asteroid-calculator.hr.ts  asteroid-calculator.hu.ts  asteroid-calculator.ia.ts  asteroid-calculator.id.ts  asteroid-calculator.isv.ts  asteroid-calculator.it.ts  asteroid-calculator.ja.ts  asteroid-calculator.ka.ts  asteroid-calculator.kab.ts  asteroid-calculator.ko.ts  asteroid-calculator.lb.ts  asteroid-calculator.lt.ts  asteroid-calculator.mr.ts  asteroid-calculator.ms.ts  asteroid-calculator.nb.ts  asteroid-calculator.nb_NO.ts  asteroid-calculator.nl_BE.ts  asteroid-calculator.nl_NL.ts  asteroid-calculator.oc.ts  (+21 more)
src/: CMakeLists.txt  CalcButton.qml  Display.qml  calculator.js  main.qml  resources.qrc
